# nes-emulator

./: .gitignore  Cargo.toml  README.md  build.rs  c6502.rs  common.rs  core.rs  flake.nix  index.html  nes.rs  ppu.rs
.cargo/: config
benches/: emulator.rs
examples/: headless.rs
src/: apu.rs  bench.rs  c6502.rs  common.rs  globals.rs  headless.rs  headless_protocol.rs  joystick.rs  lib.rs  main.rs  mapper.rs  nes.rs  ppu.rs  savable.rs  serialization.rs  video.rs
