[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Michael Burge <michaelburge@pobox.com>"]
edition = "2018"

[[bin]]
name = "nes-emulator"
path = "src/main.rs"

[[bench]]
name = "emulator"
harness = false

[dev-dependencies]
criterion = "0.3"
clap = "3.0.0-beta.1"

[dependencies]
sdl2 = "0.32"
log = "0.4.11"

[profile.release]
opt-level = 3
